Fix github icon alignment in footer

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -101,6 +101,10 @@ footer {
 			color: inherit;
 		}
 	}
+
+	svg {
+		margin-top: -3px;
+	}
 }
 
 .column {
